--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.13.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
